Further work on task 4

--- a/4_webapplikasjon/src/index.html
+++ b/4_webapplikasjon/src/index.html
@@ -7,7 +7,9 @@
     <title>Docker workshop</title>
 </head>
 <body>
-    
     <h1>Hello world</h1>
+    <button id="button">Klikk her!</button>
+    <p>Antall klikk: <span id="klikk">0</span></p>
 </body>
+<script src="./index.ts"></script>
 </html>
